[package]
name = "windmill-api-workers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_workers"
path = "src/lib.rs"

[dependencies]
windmill-api-auth.workspace = true
windmill-common = { workspace = true, default-features = false }
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
